Fixing comments from review
LMCROSSITXSADEPLOY-2301